--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,8 @@
 
 # Ignore Byebug command history file.
 .byebug_history
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
